static/output.txt
  File "C:\Users\dlstjq7685\git\2018DW//static//41.py", line 2
    
                ^
SyntaxError: unexpected EOF while parsing
